requirejs for visual tests

--- a/tests/visual/jade/index.jade
+++ b/tests/visual/jade/index.jade
@@ -4,5 +4,7 @@
 head
     title shoropleth
     link(rel="stylesheet", type="text/css", href="css/all.css")
+    script(src="js/third-party/require.js")
+    script(src="js/config/rjs.config.js")
 body
     h1 HI THERE
