Loading to existing container

--- a/tests/visual/jade/index.jade
+++ b/tests/visual/jade/index.jade
@@ -7,4 +7,4 @@ head
     script(src="js/third-party/require.js")
     script(src="js/config/rjs.config.js")
 body
-    h1 HI THERE
+    div.map-container#uk
