--- a/tests/visual/scss/all.scss
+++ b/tests/visual/scss/all.scss
@@ -1,10 +1,7 @@
 
 @import "shoropleth.scss";
 
-body {
-  background: linen;
-}
 
-h1 {
-  color: maroon;
+.map-container {
+  outline: 1px solid #000000;
 }
