getProjection as a separate method which can be overriden

--- a/tests/visual/jade/index.jade
+++ b/tests/visual/jade/index.jade
@@ -7,4 +7,7 @@ head
     script(src="js/third-party/require.js")
     script(src="js/config/rjs.config.js")
 body
-    div.map-container#uk
+    span.map-container#uk1
+    span.map-container#uk2
+    span.map-container#uk3
+    span.map-container#uk4
