Finally - Russia in the viewport )

--- a/tests/visual/jade/index.jade
+++ b/tests/visual/jade/index.jade
@@ -8,6 +8,4 @@ head
     script(src="js/config/rjs.config.js")
 body
     span.map-container#uk1
-    span.map-container#uk2
-    span.map-container#uk3
-    span.map-container#uk4
+    span.map-container#map
