--- a/tests/visual/jade/index.jade
+++ b/tests/visual/jade/index.jade
@@ -7,7 +7,7 @@ head
     script(src="js/third-party/require.js")
     script(src="js/config/rjs.config.js")
 body
-    span.maps
-        span.map-container#map-cis
-        span.map-container#map-fo
-        span.map-container#map-rus
+    .maps
+        .map#map-cis
+        .map#map-fo
+        .map#map-rus
