--- a/tests/visual/scss/all.scss
+++ b/tests/visual/scss/all.scss
@@ -1,14 +1,23 @@
 
 @import "shoropleth.scss";
+@import "flexbox.scss";
+
+$debug: false;
 
 .maps {
+  @if ($debug) {
+    background: linen;
+  }
   margin: 0 auto;
   text-align: center;
+  @include fx-box();
+  @include fx-flow(column);
+  @include fx-justify-content(flex-end);
+  @include fx-align-items(center);
 }
 
-.map-container {
-  margin: 0 auto;
-  outline: 1px solid #000000;
-  overflow: visible;
-  display: inline-block;
+.map {
+  @if ($debug) {
+    background: paleturquoise;
+  }
 }
